<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>my.game</groupId>
  <artifactId>VulkanProject</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>VulkanProject</name>
  <url>http://maven.apache.org</url>

  <properties>
    <lwjgl.version>3.3.4</lwjgl.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <profiles>
    <profile>
      <id>lwjgl-natives-linux-amd64</id>
      <activation>
        <os>
          <family>unix</family>
          <name>linux</name>
          <arch>amd64</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-linux</lwjgl.natives>
      </properties>
    </profile>
    <profile>
      <id>lwjgl-natives-linux-aarch64</id>
      <activation>
        <os>
          <family>unix</family>
          <name>linux</name>
          <arch>aarch64</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-linux-arm64</lwjgl.natives>
      </properties>
    </profile>
    <profile>
      <id>lwjgl-natives-linux-arm</id>
      <activation>
        <os>
          <family>unix</family>
          <name>linux</name>
          <arch>arm</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-linux-arm32</lwjgl.natives>
      </properties>
    </profile>
    <profile>
      <id>lwjgl-natives-linux-arm32</id>
      <activation>
        <os>
          <family>unix</family>
          <name>linux</name>
          <arch>arm32</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-linux-arm32</lwjgl.natives>
      </properties>
    </profile>
    <profile>
      <id>lwjgl-natives-macos-x86_64</id>
      <activation>
        <os>
          <family>mac</family>
          <arch>x86_64</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-macos</lwjgl.natives>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.lwjgl</groupId>
          <artifactId>lwjgl-vulkan</artifactId>
          <classifier>natives-macos</classifier>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>lwjgl-natives-macos-aarch64</id>
      <activation>
        <os>
          <family>mac</family>
          <arch>aarch64</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-macos-arm64</lwjgl.natives>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.lwjgl</groupId>
          <artifactId>lwjgl-vulkan</artifactId>
          <classifier>natives-macos-arm64</classifier>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>lwjgl-natives-windows-amd64</id>
      <activation>
        <os>
          <family>windows</family>
          <arch>amd64</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-windows</lwjgl.natives>
      </properties>
    </profile>
    <profile>
      <id>lwjgl-natives-windows-x86</id>
      <activation>
        <os>
          <family>windows</family>
          <arch>x86</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-windows-x86</lwjgl.natives>
      </properties>
    </profile>
    <profile>
      <id>lwjgl-natives-windows-aarch64</id>
      <activation>
        <os>
          <family>windows</family>
          <arch>aarch64</arch>
        </os>
      </activation>
      <properties>
        <lwjgl.natives>natives-windows-arm64</lwjgl.natives>
      </properties>
    </profile>
  </profiles>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.lwjgl</groupId>
        <artifactId>lwjgl-bom</artifactId>
        <version>${lwjgl.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>33.2.1-jre</version>
    </dependency>
    <dependency>
      <groupId>org.immutables</groupId>
      <artifactId>value</artifactId>
      <version>2.10.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.2</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.joml</groupId>
      <artifactId>joml</artifactId>
      <version>1.10.8</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-assimp</artifactId>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-glfw</artifactId>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-shaderc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-stb</artifactId>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-vma</artifactId>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-vulkan</artifactId>
    </dependency>
    <!--native libraries-->
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-assimp</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-glfw</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-shaderc</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-stb</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-vma</artifactId>
      <classifier>${lwjgl.natives}</classifier>
      <scope>runtime</scope>
    </dependency>
    <!--Unit tests-->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>23</source>
          <target>23</target>
          <annotationProcessorPaths>
            <dependency>
              <groupId>org.immutables</groupId>
              <artifactId>value</artifactId>
              <version>2.10.1</version>
            </dependency>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.8.1</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <addMavenDescriptor>false</addMavenDescriptor>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>lib/</classpathPrefix>
              <mainClass>my.game.VulkanProject</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
